kubernets/deploy-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-spring-app1
  labels:
    app: my-spring-app1
spec:
  replicas: 2
  minReadySeconds: 10
  selector:
    matchLabels:
      app: spring-app1
  template:
    metadata:
      labels:
        app: spring-app1
    spec:
      containers:
      - name: my-spring-container1
        image: spring-app:1.0
        resources:
          limits:
            memory: "512Mi"
            cpu: "200m"
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:  
            path: /actuator/health
            port: 8080
          failureThreshold: 3
          initialDelaySeconds: 150
          periodSeconds: 5
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 300
          periodSeconds: 10
